# chess-core

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  gameExample.pgn
.docker/: Dockerfile  README.md
.github/: build.sh  check_all.sh  check_code_format.sh  check_headers.sh  check_include_guards.sh  ci_entrypoint.sh  do_code_format.sh  test.sh
.github/workflows/: main.yml
app/: CMakeLists.txt
app/include/: main.hpp
app/src/: main.cpp
core/: CMakeLists.txt
core/game/: CMakeLists.txt
core/game/include/: bishop.hpp  board.hpp  game.hpp  king.hpp  knight.hpp  move.hpp  pawn.hpp  piece.hpp  queen.hpp  rook.hpp  square.hpp
core/game/src/: bishop.cpp  board.cpp  game.cpp  king.cpp  knight.cpp  move.cpp  pawn.cpp  piece.cpp  queen.cpp  rook.cpp  square.cpp
core/include/: bishop.hpp  board.hpp  king.hpp  knight.hpp  pawn.hpp  piece.hpp  queen.hpp  rook.hpp
core/parser/: CMakeLists.txt
core/parser/include/: game.hpp  move.hpp  parser.hpp
core/parser/src/: game.cpp  move.cpp  parser.cpp
core/pieces/: CMakeLists.txt
core/pieces/include/: bishop.hpp  king.hpp  knight.hpp  pawn.hpp  piece.hpp  queen.hpp  rook.hpp
core/pieces/src/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  piece.cpp  queen.cpp  rook.cpp
core/src/: bishop.cpp  board.cpp  king.cpp  knight.cpp  pawn.cpp  piece.cpp  queen.cpp  rook.cpp
tests/: CMakeLists.txt
tests/cmake-modules/: AddGoogleTest.cmake  CodeCoverage.cmake
tests/unit_test/: CMakeLists.txt
tests/unit_test/core/: CMakeLists.txt
tests/unit_test/core/game/: CMakeLists.txt
tests/unit_test/core/parser/: CMakeLists.txt
tests/unit_test/core/pieces/: CMakeLists.txt
tests/unit_test/core/pieces/src/: bishop_test.cpp  king_test.cpp  knight_test.cpp  pawn_test.cpp  piece_test.cpp  queen_test.cpp  rook_test.cpp
utils/: CMakeLists.txt
utils/include/: utils.hpp
